--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "deploy":"npm run build && npm run export",
     "build": "next build",
+    "export":"next export",
     "start": "next start"
   },
   "dependencies": {
